[package]
name = "rust_egui_examples"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "cli_lib"
path = "src/lib.rs"

[[bin]]
name = "first_app"
path = "src/first_app/main.rs"

[[bin]]
name = "counter"
path = "src/counter/main.rs"

[[bin]]
name = "plot"
path = "src/plot/bin/main.rs"

[[bin]]
name = "plot_lines"
path = "src/plot_lines/bin/main.rs"


[[bin]]
name = "painter"
path = "src/painter/bin/main.rs"

[[bin]]
name = "toggle_switch"
path = "src/toggle_switch/bin/main.rs"

[[bin]]
name = "image_buffer_test"
path = "src/image_buffer_test/bin/main.rs"

[[bin]]
name = "dynamic_texture"
path = "src/dynamic_texture/bin/main.rs"

[dependencies]
eframe = { version = "0.23.0"}
epaint = { version = "0.23.0"}
emath = { version = "0.23.0"}
egui_plot = { version = "0.23.0"}
scan_fmt = "0.2.6"
