[package]
name = "rust_egui_examples"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2021"

[lib]
name = "cli_lib"
path = "src/lib.rs"

[[bin]]
name = "first_app"
path = "src/bin/first_app/main.rs"

[[bin]]
name = "counter"
path = "src/bin/counter/main.rs"

[[bin]]
name = "plot"
path = "src/bin/plot/main.rs"

[[bin]]
name = "plot_lines"
path = "src/bin/plot_lines/main.rs"


[[bin]]
name = "painter"
path = "src/bin/painter/main.rs"

[[bin]]
name = "toggle_switch"
path = "src/bin/toggle_switch/main.rs"

[[bin]]
name = "image_buffer_test"
path = "src/bin/image_buffer_test/main.rs"

[[bin]]
name = "dynamic_texture"
path = "src/bin/dynamic_texture/main.rs"

[[bin]]
name = "drag_and_drop_assign"
path = "src/bin/drag_and_drop_assign/main.rs"

[[bin]]
name = "status_button_test_app"
path = "src/bin/status_button_test_app/main.rs"

[dependencies]
eframe = { version = "0.23.0"}
epaint = { version = "0.23.0"}
emath = { version = "0.23.0"}
egui_plot = { version = "0.23.0"}
scan_fmt = "0.2.6"
crossbeam-channel = "0.5.8"
